--- a/WebCovid19/Views/Necesidades/Referencias.cshtml
+++ b/WebCovid19/Views/Necesidades/Referencias.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 <div class="row">
-    <div class="col offset-md-2 col-md-8 text-center border border-primary">
+    <div class="col offset-md-2 col-md-8 text-center border border-primary table-light">
         @using (Html.BeginForm("Referencias", "Necesidades", FormMethod.Post))
         {
             @Html.AntiForgeryToken()
