--- a/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
@@ -126,55 +126,78 @@
                         }
                     }
                 }
-                </div>
+            </div>
         </div>
         <div class="col-md-7 float-right">
 
             <div class="col-md-12 ml-5">
-               <div class="card-body float-auto">
-            <h2 class="text-center">@Model.Nombre</h2>
+                <div class="card-body float-auto">
+                    <h2 class="text-center">@Model.Nombre</h2>
 
-            <div class="col-md-8 text-center m-auto">
-                <i>@Model.Descripcion</i>
-            </div>
-            @foreach (var necDonacionMonetaria in @Model.NecesidadesDonacionesMonetarias)
-            {
+                    <div class="col-md-8 text-center m-auto">
+                        <i>@Model.Descripcion</i>
+                        <p>
+                            <b>
+                                <i class="fa fa-phone-square" aria-hidden="true"></i>
+                                Telefono: @Model.TelefonoContacto
+                            </b>
+                        </p>
 
-                <div class="col-md-8 text-center m-auto">
-                    <p class="form-text mt-4"><b> CBU : @necDonacionMonetaria.CBU </b> </p>
-                    <p> Total Solicitado : $ @necDonacionMonetaria.Dinero</p>
+
+
+                        <a class="btn btn-info font-weight-light text-center" data-toggle="collapse" href="#collapseMotivos" role="button" aria-expanded="false" aria-controls="collapseMotivos">
+                            Referencias
+                        </a>
+
+                        <div class="collapse" id="collapseMotivos">
+                            <div class="card card-body">
+
+                                @foreach (var referencias in Model.NecesidadesReferencias)
+                                {
+                                    <h5><p class="fa fa-phone" aria-hidden="true"> @referencias.Nombre :  @referencias.Telefono </p></h5><br />
+                                }
+                            </div>
+                        </div>
+                    </div>
+
+                    @foreach (var necDonacionMonetaria in @Model.NecesidadesDonacionesMonetarias)
+                    {
+
+                        <div class="col-md-8 text-center m-auto">
+                            <p class="form-text mt-4"><b> CBU : @necDonacionMonetaria.CBU </b> </p>
+                            <p> Total Solicitado : $ @necDonacionMonetaria.Dinero</p>
+                        </div>
+
+                        <div class="col-md-8 text-center m-auto">
+                            <p>
+                                Total Recaudado: $
+                                @{
+                                    decimal totalDonado = 0;
+                                }
+
+                                @foreach (var donMonetarias in necDonacionMonetaria.DonacionesMonetarias)
+                                {
+                                    totalDonado += donMonetarias.Dinero;
+                                }
+
+                                @totalDonado
+
+                            </p>
+
+                        </div>
+                    }
+
                 </div>
-
-                <div class="col-md-8 text-center m-auto">
-                    <p>
-                        Total Recaudado: $
-                        @{
-                            decimal totalDonado = 0;
-                        }
-
-                        @foreach (var donMonetarias in necDonacionMonetaria.DonacionesMonetarias)
-                        {
-                            totalDonado += donMonetarias.Dinero;
-                        }
-
-                        @totalDonado
-
-                    </p>
-
-                </div>
-            }
-
-        </div>
                 @if (Model.IdUsuarioCreador == idSession)
                 {
-            <div class="col-md-12 btn-group mt-4 mb-3">
-                @Html.ActionLink("Regresar a Home", "Home", "Necesidades", "", new { @class = "btn btn-danger" })
+                    <div class="col-md-12 btn-group mt-4 mb-3">
+                        @Html.ActionLink("Regresar a Home", "Home", "Necesidades", "", new { @class = "btn btn-danger" })
 
-                @if (Model.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada && Model.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Finalizada)
-                {
-                    @Html.ActionLink("Editar", "Modificar/" + @Model.IdNecesidad, "Necesidades", null, new { @class = "btn btn-info ml-2" })
-                }
-            </div>
+                        @if (Model.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Bloqueada && Model.Estado != (int)Entidades.Enum.TipoEstadoNecesidad.Finalizada)
+                        {
+                            @Html.ActionLink("Editar", "Modificar/" + @Model.IdNecesidad, "Necesidades", null, new { @class = "btn btn-info ml-2" })
+                        }
+                    </div>
                 }
                 else
                 {
