--- a/WebCovid19/Views/Usuario/acerca-de.cshtml
+++ b/WebCovid19/Views/Usuario/acerca-de.cshtml
@@ -1,16 +1,14 @@
-﻿
-@{
-    ViewBag.Title = "AcercaDe";
+﻿@{
+    ViewBag.Title = "Acerca de - AyudAR";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
-
 <div class="card mb-8">
-    <div class="card-body">
-        <h2 class="font-weight-light text-center section-headline">Acerca de</h2>
-        <p class="text-center">
-            <b>ayudar </b>es una organización sin fines de lucro que busca canalizar todos los impulsos solidarios en acciones concretas. A través de una página web, buscamos conectar personas que están dispuestas a ayudar con aquellos que realmente lo necesitan.</p>
+    <div class="card-body text-center">
+        <h2 class="font-weight-light text-center section-headline">Acerca de nosotros...</h2>
+        <p>
+            <b>AyudAR</b> es una organización sin fines de lucro que busca canalizar todos los impulsos solidarios en acciones concretas. A través de una página web, buscamos conectar personas que están dispuestas a ayudar con aquellos que realmente lo necesitan.</p>
+        <hr />
         <img class="card-img-bottom" src="~/Content/img/solidaridad2.jpg" alt="Responsive image">   
-    </div>
-    
+    </div>   
 </div>
