--- a/WebCovid19/Views/Usuario/Perfil.cshtml
+++ b/WebCovid19/Views/Usuario/Perfil.cshtml
@@ -1,4 +1,4 @@
-﻿@model Entidades.Views.VMPerfil
+@model Entidades.Views.VMPerfil
 
 @{
     ViewBag.Title = "Perfil";
@@ -76,10 +76,8 @@
                                     <ul class="dropdown-menu hover " role="menu" id="colour">
                                         <li class="text-center ">
                                             <a href="" class="text-light">
-                                                <svg class="bi bi-exclamation-square-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                                    <path fill-rule="evenodd" d="M2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2zm6 4a.905.905 0 00-.9.995l.35 3.507a.552.552 0 001.1 0l.35-3.507A.905.905 0 008 4zm.002 6a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
-                                                </svg>
-                                                @Html.ActionLink("Mis donaciones", "HistorialDonaciones", "Usuario", new { @class = "hover text-light" })
+                                                
+                                                @Html.ActionLink(" Mis donaciones", "HistorialDonaciones", "Usuario", new { @class = "dropdown-item fa fa-history" })
                                             </a>
                                         </li>
                                     </ul>
@@ -147,3 +145,4 @@
         </div>
     </div>
 }
+
